# Integrated-Education-Platform

./: .gitignore  CHANGELOG.md  README.md  README.zh-CN.md  build.bat  build.py  dev.bat  preview.bat  pyinstaller.spec  pyinstaller_onefile.spec  start.bat  打包部署说明.md
backend/: __init__.py  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 03eb2c8a0374_make_play_sessions_level_id_nullable_.py  17bd3a6a2669_add_uq_active_session_index.py  ce0c7c1d26e9_baseline.py
backend/app/: __main__.py  cli.py  config.py  database.py  deps.py  exceptions.py  logging_config.py  main.py  utils.py
backend/app/models/: __init__.py  achievement.py  pvp.py  question.py  record.py  unit.py  user.py
backend/app/routers/: __init__.py  achievements.py  admin.py  auth.py  leaderboard.py  pvp.py  questions.py  records.py  scores.py  units.py
backend/app/schemas/: __init__.py  admin.py  auth.py  pvp.py  question.py  record.py
backend/app/services/: achievement_service.py  auth_service.py  pvp_service.py  question_service.py  rate_limiter.py  scoring_service.py
backend/app/ws/: auth_cache.py  manager.py  router.py
backend/tests/: conftest.py
backend/tests/factories/: __init__.py
backend/tests/integration/: test_auth.py
backend/tests/unit/: test_pvp_runtime_state.py  test_pvp_scoring.py  test_question_answer_matching.py  test_scoring.py
docs/: API.md  ARCHITECTURE.md  DATABASE.md  GIT_WORKFLOW.md  PRD.md  RELEASE_POLICY.md  UI_SPEC.md  题库导入格式规范.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  (+2 more)
(+182 files in other folders)
